Moved height property into tablet media query to fix issue on smaller screens.

--- a/assets/sass/_base.sass
+++ b/assets/sass/_base.sass
@@ -1104,7 +1104,7 @@ $feature-box-div-margin-bottom: 40px
 
 	main
 		margin-bottom: $ocean-nodes-padding-Y
-		height: 160px
+		min-height: 160px
 
 	.image-wrapper
 		max-width: 75%
